[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tiny ant 1.png" type="Texture" id=1]
[ext_resource path="res://src/catapult/projectiles/Projectile.gd" type="Script" id=2]
[ext_resource path="res://src/creatures/Ant.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.0
height = 10.0

[node name="AntProjectile" type="RigidBody2D"]
collision_layer = 2
collision_mask = 33
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
spawn_scene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_AntProjectile_body_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_AntProjectile_sleeping_state_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
